--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_CONNECT = mongodb+srv://testUser:12345@cluster0.08nr3fx.mongodb.net/?retryWrites=true&w=majority
 TOKEN_SECRET: TimeIsGold12345
+PORT = 80
